fix nav bar sizing and alignment, burger broken

--- a/sass/_search.scss
+++ b/sass/_search.scss
@@ -1,5 +1,7 @@
 .search-container {
   display: none;
+  background:#f1f1f1;
+  padding: 4px 4px;
 
   &--is-visible {
     display: block;
@@ -18,6 +20,11 @@
     font-family:$font-family;
     color:$color;
     background:transparent;
+  }
+
+  #search-dialogue {
+    background:#d6d6d6;
+    padding: 1rem 1rem
   }
 
   #search:focus {
